<resources>
    <string name="app_name">Pixel Launcher Mods</string>
    <string name="search">Search</string>
    <string name="no_root_dialog_title">No Root</string>
    <string name="no_root_dialog_content">Pixel Launcher Mods requires a rooted device. Please read the FAQs for more details.</string>
    <string name="no_root_dialog_close">Close</string>
    <string name="no_pixel_launcher_dialog_title">Pixel Launcher Not Installed</string>
    <string name="no_pixel_launcher_dialog_content">You must have the Pixel Launcher installed to use Pixel Launcher Mods</string>
    <string name="no_pixel_launcher_dialog_close">Close</string>
    <string name="menu_bottom_nav_apps">Apps</string>
    <string name="menu_bottom_nav_shortcuts">Shortcuts</string>
    <string name="menu_bottom_nav_tweaks">Tweaks</string>
    <string name="menu_bottom_nav_options">More</string>
    <string name="apps_title">App Drawer Apps</string>
    <string name="apps_loading">Loading Apps…</string>
    <string name="apps_error">Error Loading Apps</string>
    <string name="apps_error_sub">Make sure you have granted the app root. If the problem persists, try rebooting or clearing the data of Pixel Launcher.</string>
    <string name="apps_apply_icon_pack">Apply Icon Packs</string>
    <string name="app_editor_input_label">Label</string>
    <string name="app_editor_save">Save</string>
    <string name="app_editor_normal_icon">App Drawer</string>
    <string name="app_editor_normal_icon_shortcut">Icon</string>
    <string name="app_editor_add_themed_icon">Add Themed Icon</string>
    <string name="app_editor_themed_icon">Home Screen</string>
    <string name="app_editor_themed_icon_shortcut">Themed Icon</string>
    <string name="app_editor_loading">Loading App…</string>
    <string name="app_editor_loading_shortcut">Loading Shortcut…</string>
    <string name="app_editor_saving">Saving App…</string>
    <string name="app_editor_resetting">Resetting App…</string>
    <string name="app_editor_saving_shortcut">Saving Shortcut…</string>
    <string name="app_editor_resetting_shortcut">Resetting Shortcut…</string>
    <string name="app_editor_reset">Reset</string>
    <string name="app_editor_dynamic_warning">This app\'s icons are dynamic and cannot be changed</string>
    <string name="app_editor_app_shortcut_label_warning">App Shortcut labels cannot be edited</string>
    <string name="app_editor_iconpicker_remove">Remove Themed Icon</string>
    <string name="app_editor_iconpicker_legacy_themed_title">Themed Icons (Legacy)</string>
    <string name="app_editor_iconpicker_lawnicons_title">Lawnicons</string>
    <string name="app_editor_iconpicker_loading">Loading Icon Sources…</string>
    <string name="app_editor_iconpicker_title">Icon Source</string>
    <string name="app_editor_iconpicker_header">Themed Icons are always tinted to your device theme colour. When using a custom icon, adaptive icons and/or icons without a solid background work best.</string>
    <string name="app_editor_iconpicker_more">More</string>
    <string name="app_editor_iconpicker_apps">Installed Apps</string>
    <string name="app_editor_iconpicker_apps_switch_title">Adaptive Icon Conversion</string>
    <string name="app_editor_iconpicker_apps_switch_subtitle">Adds a white \'plate\' behind older, non-adaptive icons</string>
    <string name="app_editor_iconpicker_files">Import Image</string>
    <string name="app_editor_iconpicker_pack_loading">Loading Icons…</string>
    <string name="app_editor_iconpicker_pack_title">Icon Pack</string>
    <string name="app_editor_iconpicker_pack_open_external">Open Pack</string>
    <string name="app_editor_iconpicker_legacy_themed_header_content">Icon Packs and custom images cannot be set as a Themed Icon directly. For more Themed Icons, consider using a Magisk module that adds more via overlays (see XDA thread for details).</string>
    <string name="app_editor_iconpicker_legacy_themed_loading">Loading Themed Icons…</string>
    <string name="app_editor_iconpicker_apps_loading">Loading Apps…</string>
    <string name="app_editor_iconpicker_apps_title">Installed Apps</string>
    <string name="shortcuts_title">Home Screen Shortcuts</string>
    <string name="shortcuts_error">No Shortcuts Found</string>
    <string name="shortcuts_error_sub">If you were expecting shortcuts, make sure you have granted Pixel Launcher Mods root. If the problem persists, try rebooting or clearing the data of Pixel Launcher.</string>
    <string name="shortcuts_loading">Loading Shortcuts…</string>
    <string name="notification_channel_title_foreground_service">Background Service</string>
    <string name="notification_channel_desc_foreground_service">Notifications to keep the background service running</string>
    <string name="notification_title_foreground_service">Pixel Launcher Mods is running</string>
    <string name="notification_content_foreground_service">Listening for app icon changes, tap to hide.</string>
    <string name="notification_channel_title_icon_applying">Icon Changes</string>
    <string name="notification_channel_desc_icon_applying">Progress notifications when updating &amp; applying icons</string>
    <string name="notification_channel_title_update">Update</string>
    <string name="notification_channel_desc_update">Notifications when an update is available</string>
    <string name="notification_title_update">Pixel Launcher Mods update available</string>
    <string name="notification_title_content">An update is available for Pixel Launcher Mods (%1s to %1s)</string>
    <string name="notification_title_applying_icons">Applying Icons</string>
    <string name="notification_title_updating_icons">Updating Icons</string>
    <string name="notification_title_updating_icon_packs">Updating Icon Packs</string>
    <string name="notification_content_updating_icon_packs">This may take a few minutes</string>
    <string name="auto_icon_pack_loading">Loading Icon Packs…</string>
    <string name="auto_icon_pack_error">No Icon Packs found</string>
    <string name="auto_icon_pack_header">Drag your icon packs into the priority order you wish to apply icons with. Packs below the line will not be used.\n<b>Note:</b> Using a large number of icon packs may take a while.</string>
    <string name="auto_icon_pack_apply">Apply</string>
    <string name="auto_icon_pack_snackbar">No icon packs above the line!</string>
    <string name="auto_icon_pack_applying">Applying Icon Packs…</string>
    <string name="auto_icon_pack_applying_sub">This may take a few minutes, depending on how many packs you selected and how many apps you have installed.</string>
    <string name="auto_icon_pack_applying_done">Icon packs applied</string>
    <string name="tweaks_title">Tweaks</string>
    <string name="tweaks_save_module">Save Magisk Module</string>
    <string name="tweaks_resize_widgets_title">Resize Widgets</string>
    <string name="tweaks_resize_widgets_content">Resize widgets beyond their normal bounds</string>
    <string name="tweaks_resize_widgets_sheet_unselected">Tap a widget to begin</string>
    <string name="tweaks_resize_widgets_sheet_unselected_info">Note: Icons are not themed and are included as a guide.</string>
    <string name="widget_resize_loading">Loading Widgets…</string>
    <string name="tweaks_hide_clock">Hide Clock</string>
    <string name="tweaks_hide_clock_content">Hide the clock from the status bar when the Pixel Launcher is showing.\n<b>Note: This will also apply in the recent apps screen, as it is handled by the Pixel Launcher.</b></string>
    <string name="hide_apps_loading">Loading…</string>
    <string name="hide_apps_magisk_title">Magisk Module Required</string>
    <string name="hide_apps_magisk_content">The Pixel Launcher Mods Magisk module is required for this option.\n\nTo install the module, first save the module using the button below, then use the <b>Install from storage</b> option in Magisk to install it, and reboot your device.</string>
    <string name="hide_apps_magisk_button">Save Module</string>
    <string name="tweaks_hide_apps">Hide Apps</string>
    <string name="tweaks_hide_apps_content">Hide apps from the app drawer</string>
    <string name="tweaks_apply">Apply Tweaks</string>
    <string name="hide_apps_save">Apply</string>
    <string name="overlay_apply_applying">Applying Tweaks…</string>
    <string name="overlay_apply_success">Tweaks applied</string>
    <string name="tweaks_apply_failed">Failed to apply Tweaks</string>
    <string name="tweaks_apply_close">Close</string>
    <string name="tweaks_apply_save_log">Save Log</string>
    <string name="tweaks_widget_replacement_preview_title">Preview</string>
    <string name="tweaks_widget_replacement_preview_bottom">Bottom</string>
    <string name="tweaks_widget_replacement_preview_top">Top</string>
    <string name="tweaks_widget_replacement">Search Box</string>
    <string name="tweaks_widget_replacement_content"><b>Experimental:</b> Replace the Search Box with a widget of your choice</string>
    <string name="proxy_widget_loading">Loading…</string>
    <string name="proxy_widget_empty">Tap to configure</string>
    <string name="proxy_widget_error">This widget failed to load\nTry a different widget</string>
    <string name="tweaks_widget_replacement_switch">Enable Replacement</string>
    <string name="tweaks_widget_replacement_provider">Select Widget</string>
    <string name="tweaks_widget_replacement_provider_content_unset">Set the widget to show</string>
    <string name="tweaks_widget_replacement_provider_content_set">Set the widget to show. Currently set to %1s.</string>
    <string name="tweaks_widget_replacement_provider_reconfigure">Reconfigure widget</string>
    <string name="tweaks_widget_replacement_provider_reconfigure_content">Change this widget\'s settings in its app</string>
    <string name="tweaks_widget_replacement_loading">Loading…</string>
    <string name="tweaks_widget_replacement_save">Apply</string>
    <string name="tweaks_widget_replacement_info"><b>Note:</b> Not all widgets are compatible with this feature. If your chosen widget fails to load (for example it stays blank or shows the generic search box), try a different one.</string>
    <string name="tweaks_widget_replacement_incompatible">Sorry, this option is not compatible with your device.\n\n<b>Note:</b> If it\'s enabled from a previous Android version, you can disable it.</string>
    <string name="tweaks_overlay">Overlay UI Tweaks</string>
    <string name="tweaks_overlay_content">UI tweaks using overlays</string>
    <string name="tweaks_overlay_background_transparency">Recents Background Transparency</string>
    <string name="tweaks_overlay_background_transparency_content"><b>Note: Lower values may reduce readability</b>. Background may still be blurred, depending on your device.</string>
    <string name="tweaks_overlay_wallpaper_scrim">Disable Wallpaper Scrim</string>
    <string name="tweaks_overlay_wallpaper_scrim_content">Disable the dark scrim at the top of the screen on the wallpaper, intended to provide text contrast for the status bar</string>
    <string name="widget_replacement_picker_title">Select Widget</string>
    <string name="tweaks_deferred_restart">Seamless Restart</string>
    <string name="options_backup_restore">Backup &amp; Restore</string>
    <string name="options_backup_restore_backup">Backup</string>
    <string name="options_backup_restore_restore">Restore</string>
    <string name="restore_issue_title">Skipped Apps</string>
    <string name="magisk_info_title">Magisk Module</string>
    <string name="options_title">Options</string>
    <string name="options_reapply_icons">Re-apply Icons</string>
    <string name="options_advanced">Advanced</string>
    <string name="options_advanced_reset">Reset</string>
    <string name="options_faq_short">FAQs</string>
    <string name="about_contributors">Contributors</string>
</resources>