<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph_tweaks"
    app:startDestination="@id/tweaksFragment">

    <fragment
        android:id="@+id/tweaksFragment"
        android:name="com.kieronquinn.app.pixellaunchermods.ui.screens.tweaks.TweaksFragment"
        android:label="@string/tweaks_title"
        tools:layout="@layout/fragment_settings_base" >
        <action
            android:id="@+id/action_tweaksFragment_to_hideAppsFragment"
            app:destination="@id/hideAppsFragment" />
        <action
            android:id="@+id/action_tweaksFragment_to_tweaksWidgetReplacementFragment"
            app:destination="@id/tweaksWidgetReplacementFragment" />
        <action
            android:id="@+id/action_tweaksFragment_to_recentsTweaksFragment"
            app:destination="@id/recentsTweaksFragment" />
    </fragment>
    <fragment
        android:id="@+id/hideAppsFragment"
        android:name="com.kieronquinn.app.pixellaunchermods.ui.screens.tweaks.hideapps.HideAppsFragment"
        android:label="@string/tweaks_hide_apps"
        tools:layout="@layout/fragment_hide_apps" >
        <action
            android:id="@+id/action_hideAppsFragment_to_hideAppsApplyFragment"
            app:destination="@id/tweaksApplyFragment" />
    </fragment>
    <fragment
        android:id="@+id/tweaksApplyFragment"
        android:name="com.kieronquinn.app.pixellaunchermods.ui.screens.tweaks.overlayapply.OverlayApplyFragment"
        android:label="@string/tweaks_apply"
        tools:layout="@layout/fragment_tweaks_apply" >
        <argument
            android:name="components"
            app:argType="string[]"
            app:nullable="true" />
        <argument
            android:name="widget_replacement"
            app:argType="com.kieronquinn.app.pixellaunchermods.model.tweaks.ParceledWidgetReplacement"
            app:nullable="true" />
        <argument
            android:name="recents_transparency"
            app:argType="string"
            app:nullable="true" />
    </fragment>
    <fragment
        android:id="@+id/tweaksWidgetReplacementFragment"
        android:name="com.kieronquinn.app.pixellaunchermods.ui.screens.tweaks.widgetreplacement.WidgetReplacementFragment"
        android:label="@string/tweaks_widget_replacement"
        tools:layout="@layout/fragment_tweaks_widget_replacement" >
        <action
            android:id="@+id/action_tweaksWidgetReplacementFragment_to_tweaksApplyFragment"
            app:destination="@id/tweaksApplyFragment" />
        <action
            android:id="@+id/action_tweaksWidgetReplacementFragment_to_widgetReplacementPickerFragment"
            app:destination="@id/widgetReplacementPickerFragment" />
    </fragment>
    <fragment
        android:id="@+id/widgetReplacementPickerFragment"
        android:name="com.kieronquinn.app.pixellaunchermods.ui.screens.tweaks.widgetreplacement.widgetpicker.WidgetReplacementPickerFragment"
        android:label="@string/widget_replacement_picker_title"
        tools:layout="@layout/fragment_widget_replacement_picker">
        <deepLink
            android:id="@+id/widgetComponentPickerDeeplink"
            app:action="android.intent.action.VIEW"
            app:uri="plm://widgetcomponentpicker" />
    </fragment>
    <fragment
        android:id="@+id/recentsTweaksFragment"
        android:name="com.kieronquinn.app.pixellaunchermods.ui.screens.tweaks.recents.RecentsTweaksFragment"
        android:label="@string/tweaks_recents"
        tools:layout="@layout/fragment_settings_tweaks_recents">
        <action
            android:id="@+id/action_recentsTweaksFragment_to_tweaksApplyFragment"
            app:destination="@id/tweaksApplyFragment" />
    </fragment>

</navigation>