<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:transitionGroup="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:id="@+id/app_editor_loading"
        android:orientation="vertical">

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/app_editor_loading_progress"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            app:trackCornerRadius="4dp"
            app:trackThickness="8dp" />

        <TextView
            android:id="@+id/app_editor_loading_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:text="@string/app_editor_loading"
            android:textColor="?android:textColorPrimary"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium.PixelLauncherMods" />

    </LinearLayout>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_editor_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:layout_behavior="com.kieronquinn.app.pixellaunchermods.utils.appbar.DragDisabledAppBarLayoutBehaviour">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/app_editor_collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_app_editor_header"
            android:paddingTop="@dimen/margin_16"
            android:paddingBottom="@dimen/margin_16"
            app:contentScrim="@android:color/transparent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            app:statusBarScrim="@android:color/transparent">

            <include
                android:id="@+id/app_editor_icon_container"
                layout="@layout/include_app_editor_icon_container" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:id="@+id/app_editor_content"
        android:paddingStart="@dimen/margin_16"
        android:paddingEnd="@dimen/margin_16"
        android:paddingBottom="@dimen/bottom_nav_height_margins"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/app_editor_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:hint="@string/app_editor_input_label"
            app:boxCornerRadiusBottomEnd="@dimen/margin_16"
            app:boxCornerRadiusBottomStart="@dimen/margin_16"
            app:boxCornerRadiusTopEnd="@dimen/margin_16"
            app:boxCornerRadiusTopStart="@dimen/margin_16">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/app_editor_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:singleLine="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium.PixelLauncherMods"
                tools:text="@string/app_name" />

        </com.google.android.material.textfield.TextInputLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/app_editor_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_margin="@dimen/bottom_nav_height_margins"
        android:text="@string/app_editor_save"
        android:visibility="invisible"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium.PixelLauncherMods"
        app:icon="@drawable/ic_app_editor_save" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>